test/checker/register/invalid/no_such_type.km
module NoSuchType;

type A (Foo);
